<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="main_home" >Home</string>
    <string name="main_flss" >Categories</string>
    <string name="main_zxjx" >Announced</string>
    <string name="main_gwc" >Cart</string>
    <string name="main_my" >Me</string>


    <string name="first_lxkf" >Customer service</string>
    <string name="first_down" >App download</string>
    <string name="first_mall" >Hot sale</string>
    <string name="first_zjtz_content">Congratulations to %1$s for getting %2$s</string>
    <string name="search_cancel" >Cancel</string>
    <string name="search_verify" >Search</string>

    <string name="search_lately" >Search records</string>

    <string name="login_hint_phone">Please input your phone</string>
    <string name="login_hint_password">Verification code</string>
    <string name="login_code">Get code</string>
    <string name="login_login">Sign In</string>

    <string name="userinfo_touxiang">Head portrait</string>
    <string name="userinfo_changehead">Change head portrait</string>
    <string name="userinfo_userid">User ID</string>
    <string name="userinfo_nickname">Nickname</string>
    <string name="userinfo_changename">Change nickname</string>
    <string name="userinfo_phonenum">Phone No.</string>

    <string name="first_good_spec">Commodity parameters:%1$s</string>
    <string name="first_bug_progress">Purchase schedule:</string>
    <string name="first_mall_duobao">Raffle</string>

    <string name="shopcart_selenum">Selected goods %1$s Pieces</string>
    <string name="shopcart_ljjs">Proceed to Checkout</string>
    <string name="shopcart_peizhi">Configuration:</string>
    <string name="shopcart_shuliang">Qty:</string>

    <string name="mine_allorder">All orders</string>
    <string name="mine_zjsp">Prize</string>
    <string name="mine_shdz">Address</string>
    <string name="mine_znxx">Notifications</string>
    <string name="mine_logout">Logout</string>

    <string name="product_details_sele">Select</string>
    <string name="product_details_title">Overview</string>
    <string name="product_details_gwc">Add to cart</string>
    <string name="product_details_gm">Purchase</string>
    <string name="product_details_selected">已选:</string>
    <string name="product_details_sold">Sold</string>

    <string name="serch_catagory_commond">Recommendation</string>

    <string name="loot_details_top">Top</string>
    <string name="loot_details_bqcy">Awards this period</string>
    <string name="loot_progress">Progress of treasure snatch</string>
    <string name="loot_progress_">Progress of treasure snatch:</string>
    <string name="loot_details_spjz">Commodity value:</string>
    <string name="loot_details_yicanyu">You have participated in the treasure snatch in the current period</string>
    <string name="loot_details_buy_num">Purchasing copies:</string>
    <string name="loot_details_buy_price">Actual payment:</string>
    <string name="loot_details_look">Check number</string>
    <string name="loot_details_no_canyu">You haven\'t participated in the treasure snatch in the current period</string>
    <string name="loot_details_now_canyu">Period No.: %1$s</string>
    <string name="loot_details_yijiexiao_user">Winning account:</string>
    <string name="loot_details_yijiexiao_num">Awards this period (period No.: %1$s)</string>
    <string name="loot_details_yijiexiao_luckno">Lucky number:</string>
    <string name="loot_details_yijiexiao_time">Announcement time:</string>
    <string name="loot_details_all">Check all</string>
    <string name="loot_details_last_canyu">Previous announcement(lucky user)</string>
    <string name="loot_details_num">Period No.:%1$s</string>
    <string name="loot_details_yijiexiao_new">新一期正在火热进行中...</string>
    <string name="loot_details_yijiexiao_ljcy">立即参与</string>
    <string name="plan_win_title">Announced in the past</string>
    <string name="plan_win_no">Period No.:</string>
    <string name="plan_win_luck_user">Award-winning user:</string>
    <string name="plan_win_luck_num">Lucky number:</string>
    <string name="plan_win_time">Purchasing date:</string>
    <string name="plan_win_num">Number of participants:</string>
    <string name="plan_win_jxsj">Announcement time:</string>

    <string name="loot_details_dsx">待上线</string>
    <string name="loot_details_dbz">Underway</string>
    <string name="loot_details_yjs">Announced</string>
    <string name="loot_details_ys">Sold:</string>

    <string name="class_sear_jjmy">Almost full</string>
    <string name="class_sear_zxsj">Latest release</string>
    <string name="class_sear_zxrs">Total need</string>
    <string name="class_sear_rqsp">Popularity</string>

    <string name="update_nick_title">Change nickname</string>
    <string name="update_nick_nickname">Nickname</string>
    <string name="update_nick_save">Save</string>

    <string name="mine_dbdd">Treasure Order</string>
    <string name="help_title">Help</string>
    <string name="add_address_name">Consignee</string>
    <string name="add_address_phone">Phone No.</string>
    <string name="add_address_add">Location</string>
    <string name="add_address_des">Detailed address</string>
    <string name="add_address_defult">Set as default address</string>
    <string name="add_address_save">Save address</string>
    <string name="add_address_def">Default</string>
    <string name="add_address_empty">No delivery address</string>
    <string name="add_address_del">Delete</string>
    <string name="add_address_edit">Edit address</string>
    <string name="add_address_add_toast">You do not have a shipping address yet</string>
    <string name="add_address_address_empty_toast">Address not empty</string>
    <string name="add_address_des_empty_toast">Address des not empty</string>
    <string name="add_address_phone_empty_toast">Phone not empty</string>
    <string name="add_address_name_empty_toast">Name not empty</string>
    <string name="shopping_car_del">Delete</string>
    <string name="shopping_car_empty_toast">Shopping cart is not empty</string>

    <string name="myorder_all">All</string>
    <string name="myorder_dzf">To pay</string>
    <string name="myorder_dfh">To ship</string>
    <string name="myorder_dzz">To transfer</string>
    <string name="myorder_dsh">To Receive</string>
    <string name="myorder_finish">Completed</string>
    <string name="myorder_close">Closed</string>
    <string name="myorder_ddmx">Order details</string>
    <string name="myorder_ljfk">Pay now</string>
    <string name="myorder_time">Creation time:</string>
    <string name="myorder_num">Order No.</string>
    <string name="myorder_txfh">Remind the shipment</string>
    <string name="myorder_qrsh">Receiving</string>
    <string name="myorder_ckwl">Check logistics</string>
    <string name="myorder_title">Commodity order</string>

    <string name="suborder_sub">Cash settlement</string>
    <string name="suborder_total">Total: %1$s (or %2$s points)</string>
    <string name="suborder_total_num">Selected goods %1$s Pieces</string>
    <string name="loot_sub_tail">All inclusive</string>
    <string name="loot_sub_spjz">Value</string>
    <string name="loot_sub_dcxg">Single purchase restriction: %1$d servings</string>

    <string name="order_details_title">Order details</string>
    <string name="order_details_youfei">Postage</string>
    <string name="order_details_order">Order information</string>
    <string name="order_details_state">Order state:</string>
    <string name="order_details_paytime">Payment time</string>
    <string name="order_details_sendtime">Delivery time</string>
    <string name="order_details_gettime">Time of receipt</string>
    <string name="order_details_close">Reasons for closure:</string>
    <string name="order_details_timeout">Overtime payment (avoid participating in the treasure snatch of the commodity within 30min)</string>

    <string name="allorder_djx">To be announced</string>
    <string name="allorder_yjx">Announced</string>
    <string name="allorder_yzj">已中奖</string>
    <string name="allorder_ytk">Refunded</string>
    <string name="allorder_ckjl">Check award</string>
    <string name="allorder_wdhm">My number</string>
    <string name="allorder_resul_2">Reasons for closure: Overtime payment (avoid participating in the treasure snatch of the commodity within 30min)</string>
    <string name="allorder_topay_time">The order will automatically close after %1$s </string>
    <string name="allorder_topay_time_des">Order will be closed automatically after %1$s, please pay as soon as possible</string>

    <string name="winning_goods_dlq">Waiting to receive</string>
    <string name="winning_goods_zxdb">New treasure</string>
    <string name="winning_goods_txfh">Remind the shipment</string>
    <string name="winning_goods_lj">Receiving</string>
    <string name="winning_goods_xyhm">Lucky number</string>
    <string name="winning_goods_ljsj">Time to receive the award</string>
    <string name="first_duobao_title">Treasure options</string>

    <string name="pay_des">Get 5,000 points, the points can be used to pay for the treasure hunt order.Rm reminder: Due to the large number of participants, your participation in the treasure hunt fails, and your purchased shares will automatically be transferred to the next period. If there is no change in the next issue or Diaobao parameters. The system will automatically refund you, and the refund will be returned to your payment account within x working days.</string>
    <string name="repurchase">1. A repurchase fee of %1$d%% will be charged\n2. The repurchase only supports Gcash account collection,please fill in carefully; if the Gcash account is incorrectlyfilled and the payment cannot be made, the system willreject your repurchase application.</string>

    <string name="tasks_manager_name" formatted="false">task: %d</string>
    <string name="tasks_manager_demo_title">Tasks Manager Demo</string>
    <string name="tasks_manager_demo_name" formatted="false">task: %d</string>
    <string name="tasks_manager_demo_status_loading">Status: loading...</string>
    <string name="tasks_manager_demo_status_pending">Status: pending</string>
    <string name="tasks_manager_demo_status_started">Status: started</string>
    <string name="tasks_manager_demo_status_connected">Status: connected</string>
    <string name="tasks_manager_demo_status_progress">Status: progressing</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">Status: downloading %d</string>
    <string name="tasks_manager_demo_status_error">Status: error</string>
    <string name="tasks_manager_demo_status_paused">Status: paused</string>
    <string name="tasks_manager_demo_status_completed">Status: completed</string>
    <string name="tasks_manager_demo_status_not_downloaded">Status: has not downloaded</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>
</resources>