<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    tools:ignore="MissingDefaultResource">
    <RelativeLayout style="@style/topbar_bg" >

        <ImageView style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:text="Add the address" />

        <TextView
            android:visibility="gone"
            android:id="@+id/add_address_del"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/add_address_del"
            android:textColor="#333333"
            android:textSize="14dp" />

    </RelativeLayout>

    <LinearLayout
        android:background="@drawable/radius_4_shap"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:textColor="#5F5F5F"
                android:textSize="14dp"
                android:text="@string/add_address_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_address_name"
                android:layout_marginLeft="14dp"
                android:textSize="14dp"
                android:background="@drawable/null_drawable"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:hint="Please fill in the consignee's name"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>
        </LinearLayout>
        <View style="@style/divider_horizontal_1dp"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:textColor="#5F5F5F"
                android:textSize="14dp"
                android:text="@string/add_address_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_address_phone"
                android:layout_marginLeft="14dp"
                android:textSize="14dp"
                android:background="@drawable/null_drawable"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:hint="Consignee's mobile phone number"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>
        </LinearLayout>
        <View style="@style/divider_horizontal_1dp"/>
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:textColor="#5F5F5F"
                android:textSize="14dp"
                android:text="@string/add_address_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_address_add"
                android:layout_marginLeft="14dp"
                android:textSize="14dp"
                android:background="@drawable/null_drawable"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:hint="city block"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>
        </LinearLayout>
        <View style="@style/divider_horizontal_1dp"/>

            <TextView
                android:textColor="#5F5F5F"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:text="@string/add_address_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/add_address_des"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/null_drawable"
                android:textColor="#333333"
                android:textColorHint="#999999"
                android:hint="city block"
                android:layout_marginBottom="41dp"
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="@drawable/radius_4_shap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:textColor="#333333"
            android:textSize="14dp"
            android:text="@string/add_address_defult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/add_address_defult"
            android:src="@mipmap/address_select"
            android:layout_width="wrap_content"
            android:adjustViewBounds="true"
            android:layout_height="22dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_address_save"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/submit_order_button_shap"
            android:text="@string/add_address_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginBottom="23dp"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>