<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout style="@style/topbar_bg" >

        <ImageView style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="Me" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/radius_4_shap"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_touxiang"
                android:textSize="14sp"
                android:textColor="#3E3E3E"
                android:layout_centerVertical="true"
                />

            <ImageView
                android:id="@+id/user_info_headpic"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/oval_alpha"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E9E9E9"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userinfo_userid"
                android:textSize="14sp"
                android:textColor="#3E3E3E"
                android:layout_centerVertical="true"
                />

            <TextView
                android:id="@+id/user_info_userid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="#999999"
                android:textSize="14sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E9E9E9"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/userinfo_nickname"
                android:textColor="#3E3E3E"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/user_info_change_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/user_info_change_right"
                android:text="@string/userinfo_changename"
                android:textColor="#999999"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/user_info_change_right"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/user_info_right"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E9E9E9"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/userinfo_phonenum"
                android:textColor="#3E3E3E"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/user_info_phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#999999"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>