<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activity_page"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout style="@style/topbar_bg" >

        <ImageView style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="@string/order_details_title" />

        <ImageView
            android:id="@+id/kefu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="14dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/mine_kefu"
            />

    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/submit_order_defult_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <RelativeLayout
                android:background="@drawable/radius_4_shap"
                android:layout_marginTop="10dp"
                android:paddingBottom="20dp"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_details_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myorder_dzf"
                    android:textColor="#333333"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <zuo.biao.library.ui.ExpandListView
                    android:layout_below="@id/order_details_state"
                    android:layout_marginTop="20dp"
                    android:id="@+id/order_details_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/order_details_youfei_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/order_details_listview"
                    android:layout_marginTop="13dp"
                    android:text="@string/order_details_youfei"
                    android:textColor="#666666"
                    android:textSize="12dp" />
                <TextView
                    android:id="@+id/order_details_youfei"
                    android:textColor="#333333"
                    android:layout_marginTop="13dp"
                    android:layout_toRightOf="@id/order_details_youfei_title"
                    android:textSize="12dp"
                    android:layout_below="@id/order_details_listview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/order_details_total"
                    android:textColor="#E4393C"
                    android:textSize="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/order_details_listview"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/radius_4_shap"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:paddingTop="20dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textColor="#333333"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/order_details_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <zuo.biao.library.ui.ExpandListView
                    android:layout_marginTop="20dp"
                    android:id="@+id/order_details_order"
                    android:layout_width="match_parent"
                    android:divider="@null"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/submit_order_totle"
        android:textColor="#999999"
        android:textSize="12dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:id="@+id/submit_order_chakan"
            android:textSize="14dp"
            android:visibility="gone"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/suborder_sub"
            android:layout_width="match_parent"
            android:background="@drawable/radius_20_yellow_shap"
            android:layout_height="40dp"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/submit_order_submit"
            android:textSize="14dp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/myorder_ljfk"
            android:layout_width="match_parent"
            android:background="@drawable/radius_20_red_shap"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="40dp"/>
    </LinearLayout>

</LinearLayout>