<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_page"
    android:background="@color/white"
    >

    <RelativeLayout style="@style/topbar_bg" >

        <ImageView style="@style/topbar_return_img" />

        <TextView
            style="@style/topbar_title"
            android:layout_centerHorizontal="true"
            android:text="@string/update_nick_title" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="44dp"
            android:text="@string/update_nick_nickname" />

        <EditText
            android:id="@+id/update_nick_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="18dp"
            android:importantForAutofill="no"
            android:maxLength="20"
            android:maxLines="1"
            android:background="@null"
            android:textColor="#333333"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CBCBCB"
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/update_nick_save"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:text="@string/update_nick_save"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/submit_order_button_shap"
            android:layout_margin="10dp"
            android:layout_height="44dp"/>

        <TextView
            android:id="@+id/update_nick_cancle"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:text="Cancel"
            android:gravity="center"
            android:textColor="#333333"
            android:textSize="15sp"
            android:background="@drawable/radius_20_line_shap"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="44dp"/>
    </LinearLayout>
</LinearLayout>